--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@capacitor/core": "https://esm.sh/@capacitor/core@^8.0.0"
+    "@capacitor/core": "https://esm.sh/@capacitor/core@^8.0.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
